
SUBDIRS = \
	8 \
	16

desktopmenu_DATA = \
	flaw.desktop

desktopmenudir = \
	/usr/share/applications

EXTRA_DIST = \
	$(desktopmenu_DATA)\
	$(fonts_DATA)\
	$(icon_DATA) \
	$(audio_DATA) \
	$(fireball_DATA) \
	$(misc_DATA)

fonts_DATA = \
	tuffy.ttf \
	tuffy_bold.ttf

fontsdir = \
	$(pkgdatadir)

icon_DATA = \
	flaw.xpm

icondir = \
	/usr/share/pixmaps

audio_DATA = \
	audio/die.ogg\
	audio/fireball.ogg \
	audio/hit.ogg \
	audio/invoke.ogg \
	audio/music.xm \
	audio/shoot.ogg \
	audio/swing.ogg

audiodir = \
	$(pkgdatadir)/audio

fireball_DATA = \
	fireball/end_01.png\
	fireball/end_02.png \
	fireball/end_03.png \
	fireball/end_04.png \
	fireball/end_05.png \
	fireball/end_06.png \
	fireball/end_07.png \
	fireball/end_08.png \
	fireball/fly_01.png \
	fireball/fly_02.png \
	fireball/fly_03.png \
	fireball/fly_04.png \
	fireball/fly_05.png \
	fireball/fly_06.png \
	fireball/fly_07.png \
	fireball/fly_08.png \
	fireball/fly_09.png \
	fireball/fly_10.png \
	fireball/glow_01.png \
	fireball/glow_02.png \
	fireball/glow_03.png \
	fireball/glow_04.png \
	fireball/glow_05.png \
	fireball/glow_06.png \
	fireball/glow_07.png \
	fireball/glow_08.png \
	fireball/glow_09.png \
	fireball/glow_10.png \
	fireball/start_01.png \
	fireball/start_02.png \
	fireball/start_03.png \
	fireball/start_04.png \
	fireball/start_05.png \
	fireball/start_06.png \
	fireball/start_07.png \
	fireball/start_08.png \
	fireball/start_09.png

fireballdir = \
	$(pkgdatadir)/fireball

misc_DATA = \
	misc/arena.png\
	misc/arena8.png\
	misc/blank.png \
	misc/nopoint.png \
	misc/point.png \
	misc/title.png \
	misc/wizard_black.png \
	misc/wizard_blue.png \
	misc/wizard_green.png \
	misc/wizard_purple.png \
	misc/wizard_red.png

miscdir = \
	$(pkgdatadir)/misc

## File created by the gnome-build tools

