## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = flaw

flaw_SOURCES = \
	main.cc\
	fireball.cc\
	fireball.h \
	framerate.cc \
	framerate.h \
	game.cc \
	game.h \
	menu.cc \
	menu.h \
	wizard.cc \
	wizard.h

flaw_LDFLAGS = 

flaw_LDADD = 
