
black_DATA = \
	black/burn_01.png\
	black/burn_02.png \
	black/burn_03.png \
	black/burn_04.png \
	black/burn_05.png \
	black/burn_06.png \
	black/fall_0_01.png \
	black/fall_0_02.png \
	black/fall_0_03.png \
	black/fall_0_04.png \
	black/fall_0_05.png \
	black/fall_0_06.png \
	black/fall_0_07.png \
	black/fall_0_08.png \
	black/fall_1_01.png \
	black/fall_1_02.png \
	black/fall_1_03.png \
	black/fall_1_04.png \
	black/fall_1_05.png \
	black/fall_1_06.png \
	black/fall_1_07.png \
	black/fall_1_08.png \
	black/fall_2_01.png \
	black/fall_2_02.png \
	black/fall_2_03.png \
	black/fall_2_04.png \
	black/fall_2_05.png \
	black/fall_2_06.png \
	black/fall_2_07.png \
	black/fall_2_08.png \
	black/fall_3_01.png \
	black/fall_3_02.png \
	black/fall_3_03.png \
	black/fall_3_04.png \
	black/fall_3_05.png \
	black/fall_3_06.png \
	black/fall_3_07.png \
	black/fall_3_08.png \
	black/fall_4_01.png \
	black/fall_4_02.png \
	black/fall_4_03.png \
	black/fall_4_04.png \
	black/fall_4_05.png \
	black/fall_4_06.png \
	black/fall_4_07.png \
	black/fall_4_08.png \
	black/fall_5_01.png \
	black/fall_5_02.png \
	black/fall_5_03.png \
	black/fall_5_04.png \
	black/fall_5_05.png \
	black/fall_5_06.png \
	black/fall_5_07.png \
	black/fall_5_08.png \
	black/fall_6_01.png \
	black/fall_6_02.png \
	black/fall_6_03.png \
	black/fall_6_04.png \
	black/fall_6_05.png \
	black/fall_6_06.png \
	black/fall_6_07.png \
	black/fall_6_08.png \
	black/fall_7_01.png \
	black/fall_7_02.png \
	black/fall_7_03.png \
	black/fall_7_04.png \
	black/fall_7_05.png \
	black/fall_7_06.png \
	black/fall_7_07.png \
	black/fall_7_08.png \
	black/hit_0_01.png \
	black/hit_0_02.png \
	black/hit_0_03.png \
	black/hit_0_04.png \
	black/hit_0_05.png \
	black/hit_0_06.png \
	black/hit_0_07.png \
	black/hit_0_08.png \
	black/hit_0_09.png \
	black/hit_0_10.png \
	black/hit_1_01.png \
	black/hit_1_02.png \
	black/hit_1_03.png \
	black/hit_1_04.png \
	black/hit_1_05.png \
	black/hit_1_06.png \
	black/hit_1_07.png \
	black/hit_1_08.png \
	black/hit_1_09.png \
	black/hit_1_10.png \
	black/hit_2_01.png \
	black/hit_2_02.png \
	black/hit_2_03.png \
	black/hit_2_04.png \
	black/hit_2_05.png \
	black/hit_2_06.png \
	black/hit_2_07.png \
	black/hit_2_08.png \
	black/hit_2_09.png \
	black/hit_2_10.png \
	black/hit_3_01.png \
	black/hit_3_02.png \
	black/hit_3_03.png \
	black/hit_3_04.png \
	black/hit_3_05.png \
	black/hit_3_06.png \
	black/hit_3_07.png \
	black/hit_3_08.png \
	black/hit_3_09.png \
	black/hit_3_10.png \
	black/hit_4_01.png \
	black/hit_4_02.png \
	black/hit_4_03.png \
	black/hit_4_04.png \
	black/hit_4_05.png \
	black/hit_4_06.png \
	black/hit_4_07.png \
	black/hit_4_08.png \
	black/hit_4_09.png \
	black/hit_4_10.png \
	black/hit_5_01.png \
	black/hit_5_02.png \
	black/hit_5_03.png \
	black/hit_5_04.png \
	black/hit_5_05.png \
	black/hit_5_06.png \
	black/hit_5_07.png \
	black/hit_5_08.png \
	black/hit_5_09.png \
	black/hit_5_10.png \
	black/hit_6_01.png \
	black/hit_6_02.png \
	black/hit_6_03.png \
	black/hit_6_04.png \
	black/hit_6_05.png \
	black/hit_6_06.png \
	black/hit_6_07.png \
	black/hit_6_08.png \
	black/hit_6_09.png \
	black/hit_6_10.png \
	black/hit_7_01.png \
	black/hit_7_02.png \
	black/hit_7_03.png \
	black/hit_7_04.png \
	black/hit_7_05.png \
	black/hit_7_06.png \
	black/hit_7_07.png \
	black/hit_7_08.png \
	black/hit_7_09.png \
	black/hit_7_10.png \
	black/walk_0_01.png \
	black/walk_0_02.png \
	black/walk_0_03.png \
	black/walk_0_04.png \
	black/walk_0_05.png \
	black/walk_0_06.png \
	black/walk_0_07.png \
	black/walk_0_08.png \
	black/walk_0_09.png \
	black/walk_0_10.png \
	black/walk_0_11.png \
	black/walk_0_12.png \
	black/walk_0_13.png \
	black/walk_0_14.png \
	black/walk_0_15.png \
	black/walk_0_16.png \
	black/walk_1_01.png \
	black/walk_1_02.png \
	black/walk_1_03.png \
	black/walk_1_04.png \
	black/walk_1_05.png \
	black/walk_1_06.png \
	black/walk_1_07.png \
	black/walk_1_08.png \
	black/walk_1_09.png \
	black/walk_1_10.png \
	black/walk_1_11.png \
	black/walk_1_12.png \
	black/walk_1_13.png \
	black/walk_1_14.png \
	black/walk_1_15.png \
	black/walk_1_16.png \
	black/walk_2_01.png \
	black/walk_2_02.png \
	black/walk_2_03.png \
	black/walk_2_04.png \
	black/walk_2_05.png \
	black/walk_2_06.png \
	black/walk_2_07.png \
	black/walk_2_08.png \
	black/walk_2_09.png \
	black/walk_2_10.png \
	black/walk_2_11.png \
	black/walk_2_12.png \
	black/walk_2_13.png \
	black/walk_2_14.png \
	black/walk_2_15.png \
	black/walk_2_16.png \
	black/walk_3_01.png \
	black/walk_3_02.png \
	black/walk_3_03.png \
	black/walk_3_04.png \
	black/walk_3_05.png \
	black/walk_3_06.png \
	black/walk_3_07.png \
	black/walk_3_08.png \
	black/walk_3_09.png \
	black/walk_3_10.png \
	black/walk_3_11.png \
	black/walk_3_12.png \
	black/walk_3_13.png \
	black/walk_3_14.png \
	black/walk_3_15.png \
	black/walk_3_16.png \
	black/walk_4_01.png \
	black/walk_4_02.png \
	black/walk_4_03.png \
	black/walk_4_04.png \
	black/walk_4_05.png \
	black/walk_4_06.png \
	black/walk_4_07.png \
	black/walk_4_08.png \
	black/walk_4_09.png \
	black/walk_4_10.png \
	black/walk_4_11.png \
	black/walk_4_12.png \
	black/walk_4_13.png \
	black/walk_4_14.png \
	black/walk_4_15.png \
	black/walk_4_16.png \
	black/walk_5_01.png \
	black/walk_5_02.png \
	black/walk_5_03.png \
	black/walk_5_04.png \
	black/walk_5_05.png \
	black/walk_5_06.png \
	black/walk_5_07.png \
	black/walk_5_08.png \
	black/walk_5_09.png \
	black/walk_5_10.png \
	black/walk_5_11.png \
	black/walk_5_12.png \
	black/walk_5_13.png \
	black/walk_5_14.png \
	black/walk_5_15.png \
	black/walk_5_16.png \
	black/walk_6_01.png \
	black/walk_6_02.png \
	black/walk_6_03.png \
	black/walk_6_04.png \
	black/walk_6_05.png \
	black/walk_6_06.png \
	black/walk_6_07.png \
	black/walk_6_08.png \
	black/walk_6_09.png \
	black/walk_6_10.png \
	black/walk_6_11.png \
	black/walk_6_12.png \
	black/walk_6_13.png \
	black/walk_6_14.png \
	black/walk_6_15.png \
	black/walk_6_16.png \
	black/walk_7_01.png \
	black/walk_7_02.png \
	black/walk_7_03.png \
	black/walk_7_04.png \
	black/walk_7_05.png \
	black/walk_7_06.png \
	black/walk_7_07.png \
	black/walk_7_08.png \
	black/walk_7_09.png \
	black/walk_7_10.png \
	black/walk_7_11.png \
	black/walk_7_12.png \
	black/walk_7_13.png \
	black/walk_7_14.png \
	black/walk_7_15.png \
	black/walk_7_16.png \
	black/win.png

blackdir = \
	$(pkgdatadir)/16/black

EXTRA_DIST = \
	$(black_DATA)\
	$(blue_DATA) \
	$(green_DATA) \
	$(purple_DATA) \
	$(red_DATA)

blue_DATA = \
	blue/burn_01.png\
	blue/burn_02.png \
	blue/burn_03.png \
	blue/burn_04.png \
	blue/burn_05.png \
	blue/burn_06.png \
	blue/fall_0_01.png \
	blue/fall_0_02.png \
	blue/fall_0_03.png \
	blue/fall_0_04.png \
	blue/fall_0_05.png \
	blue/fall_0_06.png \
	blue/fall_0_07.png \
	blue/fall_0_08.png \
	blue/fall_1_01.png \
	blue/fall_1_02.png \
	blue/fall_1_03.png \
	blue/fall_1_04.png \
	blue/fall_1_05.png \
	blue/fall_1_06.png \
	blue/fall_1_07.png \
	blue/fall_1_08.png \
	blue/fall_2_01.png \
	blue/fall_2_02.png \
	blue/fall_2_03.png \
	blue/fall_2_04.png \
	blue/fall_2_05.png \
	blue/fall_2_06.png \
	blue/fall_2_07.png \
	blue/fall_2_08.png \
	blue/fall_3_01.png \
	blue/fall_3_02.png \
	blue/fall_3_03.png \
	blue/fall_3_04.png \
	blue/fall_3_05.png \
	blue/fall_3_06.png \
	blue/fall_3_07.png \
	blue/fall_3_08.png \
	blue/fall_4_01.png \
	blue/fall_4_02.png \
	blue/fall_4_03.png \
	blue/fall_4_04.png \
	blue/fall_4_05.png \
	blue/fall_4_06.png \
	blue/fall_4_07.png \
	blue/fall_4_08.png \
	blue/fall_5_01.png \
	blue/fall_5_02.png \
	blue/fall_5_03.png \
	blue/fall_5_04.png \
	blue/fall_5_05.png \
	blue/fall_5_06.png \
	blue/fall_5_07.png \
	blue/fall_5_08.png \
	blue/fall_6_01.png \
	blue/fall_6_02.png \
	blue/fall_6_03.png \
	blue/fall_6_04.png \
	blue/fall_6_05.png \
	blue/fall_6_06.png \
	blue/fall_6_07.png \
	blue/fall_6_08.png \
	blue/fall_7_01.png \
	blue/fall_7_02.png \
	blue/fall_7_03.png \
	blue/fall_7_04.png \
	blue/fall_7_05.png \
	blue/fall_7_06.png \
	blue/fall_7_07.png \
	blue/fall_7_08.png \
	blue/hit_0_01.png \
	blue/hit_0_02.png \
	blue/hit_0_03.png \
	blue/hit_0_04.png \
	blue/hit_0_05.png \
	blue/hit_0_06.png \
	blue/hit_0_07.png \
	blue/hit_0_08.png \
	blue/hit_0_09.png \
	blue/hit_0_10.png \
	blue/hit_1_01.png \
	blue/hit_1_02.png \
	blue/hit_1_03.png \
	blue/hit_1_04.png \
	blue/hit_1_05.png \
	blue/hit_1_06.png \
	blue/hit_1_07.png \
	blue/hit_1_08.png \
	blue/hit_1_09.png \
	blue/hit_1_10.png \
	blue/hit_2_01.png \
	blue/hit_2_02.png \
	blue/hit_2_03.png \
	blue/hit_2_04.png \
	blue/hit_2_05.png \
	blue/hit_2_06.png \
	blue/hit_2_07.png \
	blue/hit_2_08.png \
	blue/hit_2_09.png \
	blue/hit_2_10.png \
	blue/hit_3_01.png \
	blue/hit_3_02.png \
	blue/hit_3_03.png \
	blue/hit_3_04.png \
	blue/hit_3_05.png \
	blue/hit_3_06.png \
	blue/hit_3_07.png \
	blue/hit_3_08.png \
	blue/hit_3_09.png \
	blue/hit_3_10.png \
	blue/hit_4_01.png \
	blue/hit_4_02.png \
	blue/hit_4_03.png \
	blue/hit_4_04.png \
	blue/hit_4_05.png \
	blue/hit_4_06.png \
	blue/hit_4_07.png \
	blue/hit_4_08.png \
	blue/hit_4_09.png \
	blue/hit_4_10.png \
	blue/hit_5_01.png \
	blue/hit_5_02.png \
	blue/hit_5_03.png \
	blue/hit_5_04.png \
	blue/hit_5_05.png \
	blue/hit_5_06.png \
	blue/hit_5_07.png \
	blue/hit_5_08.png \
	blue/hit_5_09.png \
	blue/hit_5_10.png \
	blue/hit_6_01.png \
	blue/hit_6_02.png \
	blue/hit_6_03.png \
	blue/hit_6_04.png \
	blue/hit_6_05.png \
	blue/hit_6_06.png \
	blue/hit_6_07.png \
	blue/hit_6_08.png \
	blue/hit_6_09.png \
	blue/hit_6_10.png \
	blue/hit_7_01.png \
	blue/hit_7_02.png \
	blue/hit_7_03.png \
	blue/hit_7_04.png \
	blue/hit_7_05.png \
	blue/hit_7_06.png \
	blue/hit_7_07.png \
	blue/hit_7_08.png \
	blue/hit_7_09.png \
	blue/hit_7_10.png \
	blue/walk_0_01.png \
	blue/walk_0_02.png \
	blue/walk_0_03.png \
	blue/walk_0_04.png \
	blue/walk_0_05.png \
	blue/walk_0_06.png \
	blue/walk_0_07.png \
	blue/walk_0_08.png \
	blue/walk_0_09.png \
	blue/walk_0_10.png \
	blue/walk_0_11.png \
	blue/walk_0_12.png \
	blue/walk_0_13.png \
	blue/walk_0_14.png \
	blue/walk_0_15.png \
	blue/walk_0_16.png \
	blue/walk_1_01.png \
	blue/walk_1_02.png \
	blue/walk_1_03.png \
	blue/walk_1_04.png \
	blue/walk_1_05.png \
	blue/walk_1_06.png \
	blue/walk_1_07.png \
	blue/walk_1_08.png \
	blue/walk_1_09.png \
	blue/walk_1_10.png \
	blue/walk_1_11.png \
	blue/walk_1_12.png \
	blue/walk_1_13.png \
	blue/walk_1_14.png \
	blue/walk_1_15.png \
	blue/walk_1_16.png \
	blue/walk_2_01.png \
	blue/walk_2_02.png \
	blue/walk_2_03.png \
	blue/walk_2_04.png \
	blue/walk_2_05.png \
	blue/walk_2_06.png \
	blue/walk_2_07.png \
	blue/walk_2_08.png \
	blue/walk_2_09.png \
	blue/walk_2_10.png \
	blue/walk_2_11.png \
	blue/walk_2_12.png \
	blue/walk_2_13.png \
	blue/walk_2_14.png \
	blue/walk_2_15.png \
	blue/walk_2_16.png \
	blue/walk_3_01.png \
	blue/walk_3_02.png \
	blue/walk_3_03.png \
	blue/walk_3_04.png \
	blue/walk_3_05.png \
	blue/walk_3_06.png \
	blue/walk_3_07.png \
	blue/walk_3_08.png \
	blue/walk_3_09.png \
	blue/walk_3_10.png \
	blue/walk_3_11.png \
	blue/walk_3_12.png \
	blue/walk_3_13.png \
	blue/walk_3_14.png \
	blue/walk_3_15.png \
	blue/walk_3_16.png \
	blue/walk_4_01.png \
	blue/walk_4_02.png \
	blue/walk_4_03.png \
	blue/walk_4_04.png \
	blue/walk_4_05.png \
	blue/walk_4_06.png \
	blue/walk_4_07.png \
	blue/walk_4_08.png \
	blue/walk_4_09.png \
	blue/walk_4_10.png \
	blue/walk_4_11.png \
	blue/walk_4_12.png \
	blue/walk_4_13.png \
	blue/walk_4_14.png \
	blue/walk_4_15.png \
	blue/walk_4_16.png \
	blue/walk_5_01.png \
	blue/walk_5_02.png \
	blue/walk_5_03.png \
	blue/walk_5_04.png \
	blue/walk_5_05.png \
	blue/walk_5_06.png \
	blue/walk_5_07.png \
	blue/walk_5_08.png \
	blue/walk_5_09.png \
	blue/walk_5_10.png \
	blue/walk_5_11.png \
	blue/walk_5_12.png \
	blue/walk_5_13.png \
	blue/walk_5_14.png \
	blue/walk_5_15.png \
	blue/walk_5_16.png \
	blue/walk_6_01.png \
	blue/walk_6_02.png \
	blue/walk_6_03.png \
	blue/walk_6_04.png \
	blue/walk_6_05.png \
	blue/walk_6_06.png \
	blue/walk_6_07.png \
	blue/walk_6_08.png \
	blue/walk_6_09.png \
	blue/walk_6_10.png \
	blue/walk_6_11.png \
	blue/walk_6_12.png \
	blue/walk_6_13.png \
	blue/walk_6_14.png \
	blue/walk_6_15.png \
	blue/walk_6_16.png \
	blue/walk_7_01.png \
	blue/walk_7_02.png \
	blue/walk_7_03.png \
	blue/walk_7_04.png \
	blue/walk_7_05.png \
	blue/walk_7_06.png \
	blue/walk_7_07.png \
	blue/walk_7_08.png \
	blue/walk_7_09.png \
	blue/walk_7_10.png \
	blue/walk_7_11.png \
	blue/walk_7_12.png \
	blue/walk_7_13.png \
	blue/walk_7_14.png \
	blue/walk_7_15.png \
	blue/walk_7_16.png \
	blue/win.png

bluedir = \
	$(pkgdatadir)/16/blue

green_DATA = \
	green/burn_01.png\
	green/burn_02.png \
	green/burn_03.png \
	green/burn_04.png \
	green/burn_05.png \
	green/burn_06.png \
	green/fall_0_01.png \
	green/fall_0_02.png \
	green/fall_0_03.png \
	green/fall_0_04.png \
	green/fall_0_05.png \
	green/fall_0_06.png \
	green/fall_0_07.png \
	green/fall_0_08.png \
	green/fall_1_01.png \
	green/fall_1_02.png \
	green/fall_1_03.png \
	green/fall_1_04.png \
	green/fall_1_05.png \
	green/fall_1_06.png \
	green/fall_1_07.png \
	green/fall_1_08.png \
	green/fall_2_01.png \
	green/fall_2_02.png \
	green/fall_2_03.png \
	green/fall_2_04.png \
	green/fall_2_05.png \
	green/fall_2_06.png \
	green/fall_2_07.png \
	green/fall_2_08.png \
	green/fall_3_01.png \
	green/fall_3_02.png \
	green/fall_3_03.png \
	green/fall_3_04.png \
	green/fall_3_05.png \
	green/fall_3_06.png \
	green/fall_3_07.png \
	green/fall_3_08.png \
	green/fall_4_01.png \
	green/fall_4_02.png \
	green/fall_4_03.png \
	green/fall_4_04.png \
	green/fall_4_05.png \
	green/fall_4_06.png \
	green/fall_4_07.png \
	green/fall_4_08.png \
	green/fall_5_01.png \
	green/fall_5_02.png \
	green/fall_5_03.png \
	green/fall_5_04.png \
	green/fall_5_05.png \
	green/fall_5_06.png \
	green/fall_5_07.png \
	green/fall_5_08.png \
	green/fall_6_01.png \
	green/fall_6_02.png \
	green/fall_6_03.png \
	green/fall_6_04.png \
	green/fall_6_05.png \
	green/fall_6_06.png \
	green/fall_6_07.png \
	green/fall_6_08.png \
	green/fall_7_01.png \
	green/fall_7_02.png \
	green/fall_7_03.png \
	green/fall_7_04.png \
	green/fall_7_05.png \
	green/fall_7_06.png \
	green/fall_7_07.png \
	green/fall_7_08.png \
	green/hit_0_01.png \
	green/hit_0_02.png \
	green/hit_0_03.png \
	green/hit_0_04.png \
	green/hit_0_05.png \
	green/hit_0_06.png \
	green/hit_0_07.png \
	green/hit_0_08.png \
	green/hit_0_09.png \
	green/hit_0_10.png \
	green/hit_1_01.png \
	green/hit_1_02.png \
	green/hit_1_03.png \
	green/hit_1_04.png \
	green/hit_1_05.png \
	green/hit_1_06.png \
	green/hit_1_07.png \
	green/hit_1_08.png \
	green/hit_1_09.png \
	green/hit_1_10.png \
	green/hit_2_01.png \
	green/hit_2_02.png \
	green/hit_2_03.png \
	green/hit_2_04.png \
	green/hit_2_05.png \
	green/hit_2_06.png \
	green/hit_2_07.png \
	green/hit_2_08.png \
	green/hit_2_09.png \
	green/hit_2_10.png \
	green/hit_3_01.png \
	green/hit_3_02.png \
	green/hit_3_03.png \
	green/hit_3_04.png \
	green/hit_3_05.png \
	green/hit_3_06.png \
	green/hit_3_07.png \
	green/hit_3_08.png \
	green/hit_3_09.png \
	green/hit_3_10.png \
	green/hit_4_01.png \
	green/hit_4_02.png \
	green/hit_4_03.png \
	green/hit_4_04.png \
	green/hit_4_05.png \
	green/hit_4_06.png \
	green/hit_4_07.png \
	green/hit_4_08.png \
	green/hit_4_09.png \
	green/hit_4_10.png \
	green/hit_5_01.png \
	green/hit_5_02.png \
	green/hit_5_03.png \
	green/hit_5_04.png \
	green/hit_5_05.png \
	green/hit_5_06.png \
	green/hit_5_07.png \
	green/hit_5_08.png \
	green/hit_5_09.png \
	green/hit_5_10.png \
	green/hit_6_01.png \
	green/hit_6_02.png \
	green/hit_6_03.png \
	green/hit_6_04.png \
	green/hit_6_05.png \
	green/hit_6_06.png \
	green/hit_6_07.png \
	green/hit_6_08.png \
	green/hit_6_09.png \
	green/hit_6_10.png \
	green/hit_7_01.png \
	green/hit_7_02.png \
	green/hit_7_03.png \
	green/hit_7_04.png \
	green/hit_7_05.png \
	green/hit_7_06.png \
	green/hit_7_07.png \
	green/hit_7_08.png \
	green/hit_7_09.png \
	green/hit_7_10.png \
	green/walk_0_01.png \
	green/walk_0_02.png \
	green/walk_0_03.png \
	green/walk_0_04.png \
	green/walk_0_05.png \
	green/walk_0_06.png \
	green/walk_0_07.png \
	green/walk_0_08.png \
	green/walk_0_09.png \
	green/walk_0_10.png \
	green/walk_0_11.png \
	green/walk_0_12.png \
	green/walk_0_13.png \
	green/walk_0_14.png \
	green/walk_0_15.png \
	green/walk_0_16.png \
	green/walk_1_01.png \
	green/walk_1_02.png \
	green/walk_1_03.png \
	green/walk_1_04.png \
	green/walk_1_05.png \
	green/walk_1_06.png \
	green/walk_1_07.png \
	green/walk_1_08.png \
	green/walk_1_09.png \
	green/walk_1_10.png \
	green/walk_1_11.png \
	green/walk_1_12.png \
	green/walk_1_13.png \
	green/walk_1_14.png \
	green/walk_1_15.png \
	green/walk_1_16.png \
	green/walk_2_01.png \
	green/walk_2_02.png \
	green/walk_2_03.png \
	green/walk_2_04.png \
	green/walk_2_05.png \
	green/walk_2_06.png \
	green/walk_2_07.png \
	green/walk_2_08.png \
	green/walk_2_09.png \
	green/walk_2_10.png \
	green/walk_2_11.png \
	green/walk_2_12.png \
	green/walk_2_13.png \
	green/walk_2_14.png \
	green/walk_2_15.png \
	green/walk_2_16.png \
	green/walk_3_01.png \
	green/walk_3_02.png \
	green/walk_3_03.png \
	green/walk_3_04.png \
	green/walk_3_05.png \
	green/walk_3_06.png \
	green/walk_3_07.png \
	green/walk_3_08.png \
	green/walk_3_09.png \
	green/walk_3_10.png \
	green/walk_3_11.png \
	green/walk_3_12.png \
	green/walk_3_13.png \
	green/walk_3_14.png \
	green/walk_3_15.png \
	green/walk_3_16.png \
	green/walk_4_01.png \
	green/walk_4_02.png \
	green/walk_4_03.png \
	green/walk_4_04.png \
	green/walk_4_05.png \
	green/walk_4_06.png \
	green/walk_4_07.png \
	green/walk_4_08.png \
	green/walk_4_09.png \
	green/walk_4_10.png \
	green/walk_4_11.png \
	green/walk_4_12.png \
	green/walk_4_13.png \
	green/walk_4_14.png \
	green/walk_4_15.png \
	green/walk_4_16.png \
	green/walk_5_01.png \
	green/walk_5_02.png \
	green/walk_5_03.png \
	green/walk_5_04.png \
	green/walk_5_05.png \
	green/walk_5_06.png \
	green/walk_5_07.png \
	green/walk_5_08.png \
	green/walk_5_09.png \
	green/walk_5_10.png \
	green/walk_5_11.png \
	green/walk_5_12.png \
	green/walk_5_13.png \
	green/walk_5_14.png \
	green/walk_5_15.png \
	green/walk_5_16.png \
	green/walk_6_01.png \
	green/walk_6_02.png \
	green/walk_6_03.png \
	green/walk_6_04.png \
	green/walk_6_05.png \
	green/walk_6_06.png \
	green/walk_6_07.png \
	green/walk_6_08.png \
	green/walk_6_09.png \
	green/walk_6_10.png \
	green/walk_6_11.png \
	green/walk_6_12.png \
	green/walk_6_13.png \
	green/walk_6_14.png \
	green/walk_6_15.png \
	green/walk_6_16.png \
	green/walk_7_01.png \
	green/walk_7_02.png \
	green/walk_7_03.png \
	green/walk_7_04.png \
	green/walk_7_05.png \
	green/walk_7_06.png \
	green/walk_7_07.png \
	green/walk_7_08.png \
	green/walk_7_09.png \
	green/walk_7_10.png \
	green/walk_7_11.png \
	green/walk_7_12.png \
	green/walk_7_13.png \
	green/walk_7_14.png \
	green/walk_7_15.png \
	green/walk_7_16.png \
	green/win.png

greendir = \
	$(pkgdatadir)/16/green

purple_DATA = \
	purple/burn_01.png\
	purple/burn_02.png \
	purple/burn_03.png \
	purple/burn_04.png \
	purple/burn_05.png \
	purple/burn_06.png \
	purple/fall_0_01.png \
	purple/fall_0_02.png \
	purple/fall_0_03.png \
	purple/fall_0_04.png \
	purple/fall_0_05.png \
	purple/fall_0_06.png \
	purple/fall_0_07.png \
	purple/fall_0_08.png \
	purple/fall_1_01.png \
	purple/fall_1_02.png \
	purple/fall_1_03.png \
	purple/fall_1_04.png \
	purple/fall_1_05.png \
	purple/fall_1_06.png \
	purple/fall_1_07.png \
	purple/fall_1_08.png \
	purple/fall_2_01.png \
	purple/fall_2_02.png \
	purple/fall_2_03.png \
	purple/fall_2_04.png \
	purple/fall_2_05.png \
	purple/fall_2_06.png \
	purple/fall_2_07.png \
	purple/fall_2_08.png \
	purple/fall_3_01.png \
	purple/fall_3_02.png \
	purple/fall_3_03.png \
	purple/fall_3_04.png \
	purple/fall_3_05.png \
	purple/fall_3_06.png \
	purple/fall_3_07.png \
	purple/fall_3_08.png \
	purple/fall_4_01.png \
	purple/fall_4_02.png \
	purple/fall_4_03.png \
	purple/fall_4_04.png \
	purple/fall_4_05.png \
	purple/fall_4_06.png \
	purple/fall_4_07.png \
	purple/fall_4_08.png \
	purple/fall_5_01.png \
	purple/fall_5_02.png \
	purple/fall_5_03.png \
	purple/fall_5_04.png \
	purple/fall_5_05.png \
	purple/fall_5_06.png \
	purple/fall_5_07.png \
	purple/fall_5_08.png \
	purple/fall_6_01.png \
	purple/fall_6_02.png \
	purple/fall_6_03.png \
	purple/fall_6_04.png \
	purple/fall_6_05.png \
	purple/fall_6_06.png \
	purple/fall_6_07.png \
	purple/fall_6_08.png \
	purple/fall_7_01.png \
	purple/fall_7_02.png \
	purple/fall_7_03.png \
	purple/fall_7_04.png \
	purple/fall_7_05.png \
	purple/fall_7_06.png \
	purple/fall_7_07.png \
	purple/fall_7_08.png \
	purple/hit_0_01.png \
	purple/hit_0_02.png \
	purple/hit_0_03.png \
	purple/hit_0_04.png \
	purple/hit_0_05.png \
	purple/hit_0_06.png \
	purple/hit_0_07.png \
	purple/hit_0_08.png \
	purple/hit_0_09.png \
	purple/hit_0_10.png \
	purple/hit_1_01.png \
	purple/hit_1_02.png \
	purple/hit_1_03.png \
	purple/hit_1_04.png \
	purple/hit_1_05.png \
	purple/hit_1_06.png \
	purple/hit_1_07.png \
	purple/hit_1_08.png \
	purple/hit_1_09.png \
	purple/hit_1_10.png \
	purple/hit_2_01.png \
	purple/hit_2_02.png \
	purple/hit_2_03.png \
	purple/hit_2_04.png \
	purple/hit_2_05.png \
	purple/hit_2_06.png \
	purple/hit_2_07.png \
	purple/hit_2_08.png \
	purple/hit_2_09.png \
	purple/hit_2_10.png \
	purple/hit_3_01.png \
	purple/hit_3_02.png \
	purple/hit_3_03.png \
	purple/hit_3_04.png \
	purple/hit_3_05.png \
	purple/hit_3_06.png \
	purple/hit_3_07.png \
	purple/hit_3_08.png \
	purple/hit_3_09.png \
	purple/hit_3_10.png \
	purple/hit_4_01.png \
	purple/hit_4_02.png \
	purple/hit_4_03.png \
	purple/hit_4_04.png \
	purple/hit_4_05.png \
	purple/hit_4_06.png \
	purple/hit_4_07.png \
	purple/hit_4_08.png \
	purple/hit_4_09.png \
	purple/hit_4_10.png \
	purple/hit_5_01.png \
	purple/hit_5_02.png \
	purple/hit_5_03.png \
	purple/hit_5_04.png \
	purple/hit_5_05.png \
	purple/hit_5_06.png \
	purple/hit_5_07.png \
	purple/hit_5_08.png \
	purple/hit_5_09.png \
	purple/hit_5_10.png \
	purple/hit_6_01.png \
	purple/hit_6_02.png \
	purple/hit_6_03.png \
	purple/hit_6_04.png \
	purple/hit_6_05.png \
	purple/hit_6_06.png \
	purple/hit_6_07.png \
	purple/hit_6_08.png \
	purple/hit_6_09.png \
	purple/hit_6_10.png \
	purple/hit_7_01.png \
	purple/hit_7_02.png \
	purple/hit_7_03.png \
	purple/hit_7_04.png \
	purple/hit_7_05.png \
	purple/hit_7_06.png \
	purple/hit_7_07.png \
	purple/hit_7_08.png \
	purple/hit_7_09.png \
	purple/hit_7_10.png \
	purple/walk_0_01.png \
	purple/walk_0_02.png \
	purple/walk_0_03.png \
	purple/walk_0_04.png \
	purple/walk_0_05.png \
	purple/walk_0_06.png \
	purple/walk_0_07.png \
	purple/walk_0_08.png \
	purple/walk_0_09.png \
	purple/walk_0_10.png \
	purple/walk_0_11.png \
	purple/walk_0_12.png \
	purple/walk_0_13.png \
	purple/walk_0_14.png \
	purple/walk_0_15.png \
	purple/walk_0_16.png \
	purple/walk_1_01.png \
	purple/walk_1_02.png \
	purple/walk_1_03.png \
	purple/walk_1_04.png \
	purple/walk_1_05.png \
	purple/walk_1_06.png \
	purple/walk_1_07.png \
	purple/walk_1_08.png \
	purple/walk_1_09.png \
	purple/walk_1_10.png \
	purple/walk_1_11.png \
	purple/walk_1_12.png \
	purple/walk_1_13.png \
	purple/walk_1_14.png \
	purple/walk_1_15.png \
	purple/walk_1_16.png \
	purple/walk_2_01.png \
	purple/walk_2_02.png \
	purple/walk_2_03.png \
	purple/walk_2_04.png \
	purple/walk_2_05.png \
	purple/walk_2_06.png \
	purple/walk_2_07.png \
	purple/walk_2_08.png \
	purple/walk_2_09.png \
	purple/walk_2_10.png \
	purple/walk_2_11.png \
	purple/walk_2_12.png \
	purple/walk_2_13.png \
	purple/walk_2_14.png \
	purple/walk_2_15.png \
	purple/walk_2_16.png \
	purple/walk_3_01.png \
	purple/walk_3_02.png \
	purple/walk_3_03.png \
	purple/walk_3_04.png \
	purple/walk_3_05.png \
	purple/walk_3_06.png \
	purple/walk_3_07.png \
	purple/walk_3_08.png \
	purple/walk_3_09.png \
	purple/walk_3_10.png \
	purple/walk_3_11.png \
	purple/walk_3_12.png \
	purple/walk_3_13.png \
	purple/walk_3_14.png \
	purple/walk_3_15.png \
	purple/walk_3_16.png \
	purple/walk_4_01.png \
	purple/walk_4_02.png \
	purple/walk_4_03.png \
	purple/walk_4_04.png \
	purple/walk_4_05.png \
	purple/walk_4_06.png \
	purple/walk_4_07.png \
	purple/walk_4_08.png \
	purple/walk_4_09.png \
	purple/walk_4_10.png \
	purple/walk_4_11.png \
	purple/walk_4_12.png \
	purple/walk_4_13.png \
	purple/walk_4_14.png \
	purple/walk_4_15.png \
	purple/walk_4_16.png \
	purple/walk_5_01.png \
	purple/walk_5_02.png \
	purple/walk_5_03.png \
	purple/walk_5_04.png \
	purple/walk_5_05.png \
	purple/walk_5_06.png \
	purple/walk_5_07.png \
	purple/walk_5_08.png \
	purple/walk_5_09.png \
	purple/walk_5_10.png \
	purple/walk_5_11.png \
	purple/walk_5_12.png \
	purple/walk_5_13.png \
	purple/walk_5_14.png \
	purple/walk_5_15.png \
	purple/walk_5_16.png \
	purple/walk_6_01.png \
	purple/walk_6_02.png \
	purple/walk_6_03.png \
	purple/walk_6_04.png \
	purple/walk_6_05.png \
	purple/walk_6_06.png \
	purple/walk_6_07.png \
	purple/walk_6_08.png \
	purple/walk_6_09.png \
	purple/walk_6_10.png \
	purple/walk_6_11.png \
	purple/walk_6_12.png \
	purple/walk_6_13.png \
	purple/walk_6_14.png \
	purple/walk_6_15.png \
	purple/walk_6_16.png \
	purple/walk_7_01.png \
	purple/walk_7_02.png \
	purple/walk_7_03.png \
	purple/walk_7_04.png \
	purple/walk_7_05.png \
	purple/walk_7_06.png \
	purple/walk_7_07.png \
	purple/walk_7_08.png \
	purple/walk_7_09.png \
	purple/walk_7_10.png \
	purple/walk_7_11.png \
	purple/walk_7_12.png \
	purple/walk_7_13.png \
	purple/walk_7_14.png \
	purple/walk_7_15.png \
	purple/walk_7_16.png \
	purple/win.png

purpledir = \
	$(pkgdatadir)/16/purple

red_DATA = \
	red/burn_01.png\
	red/burn_02.png \
	red/burn_03.png \
	red/burn_04.png \
	red/burn_05.png \
	red/burn_06.png \
	red/fall_0_01.png \
	red/fall_0_02.png \
	red/fall_0_03.png \
	red/fall_0_04.png \
	red/fall_0_05.png \
	red/fall_0_06.png \
	red/fall_0_07.png \
	red/fall_0_08.png \
	red/fall_1_01.png \
	red/fall_1_02.png \
	red/fall_1_03.png \
	red/fall_1_04.png \
	red/fall_1_05.png \
	red/fall_1_06.png \
	red/fall_1_07.png \
	red/fall_1_08.png \
	red/fall_2_01.png \
	red/fall_2_02.png \
	red/fall_2_03.png \
	red/fall_2_04.png \
	red/fall_2_05.png \
	red/fall_2_06.png \
	red/fall_2_07.png \
	red/fall_2_08.png \
	red/fall_3_01.png \
	red/fall_3_02.png \
	red/fall_3_03.png \
	red/fall_3_04.png \
	red/fall_3_05.png \
	red/fall_3_06.png \
	red/fall_3_07.png \
	red/fall_3_08.png \
	red/fall_4_01.png \
	red/fall_4_02.png \
	red/fall_4_03.png \
	red/fall_4_04.png \
	red/fall_4_05.png \
	red/fall_4_06.png \
	red/fall_4_07.png \
	red/fall_4_08.png \
	red/fall_5_01.png \
	red/fall_5_02.png \
	red/fall_5_03.png \
	red/fall_5_04.png \
	red/fall_5_05.png \
	red/fall_5_06.png \
	red/fall_5_07.png \
	red/fall_5_08.png \
	red/fall_6_01.png \
	red/fall_6_02.png \
	red/fall_6_03.png \
	red/fall_6_04.png \
	red/fall_6_05.png \
	red/fall_6_06.png \
	red/fall_6_07.png \
	red/fall_6_08.png \
	red/fall_7_01.png \
	red/fall_7_02.png \
	red/fall_7_03.png \
	red/fall_7_04.png \
	red/fall_7_05.png \
	red/fall_7_06.png \
	red/fall_7_07.png \
	red/fall_7_08.png \
	red/hit_0_01.png \
	red/hit_0_02.png \
	red/hit_0_03.png \
	red/hit_0_04.png \
	red/hit_0_05.png \
	red/hit_0_06.png \
	red/hit_0_07.png \
	red/hit_0_08.png \
	red/hit_0_09.png \
	red/hit_0_10.png \
	red/hit_1_01.png \
	red/hit_1_02.png \
	red/hit_1_03.png \
	red/hit_1_04.png \
	red/hit_1_05.png \
	red/hit_1_06.png \
	red/hit_1_07.png \
	red/hit_1_08.png \
	red/hit_1_09.png \
	red/hit_1_10.png \
	red/hit_2_01.png \
	red/hit_2_02.png \
	red/hit_2_03.png \
	red/hit_2_04.png \
	red/hit_2_05.png \
	red/hit_2_06.png \
	red/hit_2_07.png \
	red/hit_2_08.png \
	red/hit_2_09.png \
	red/hit_2_10.png \
	red/hit_3_01.png \
	red/hit_3_02.png \
	red/hit_3_03.png \
	red/hit_3_04.png \
	red/hit_3_05.png \
	red/hit_3_06.png \
	red/hit_3_07.png \
	red/hit_3_08.png \
	red/hit_3_09.png \
	red/hit_3_10.png \
	red/hit_4_01.png \
	red/hit_4_02.png \
	red/hit_4_03.png \
	red/hit_4_04.png \
	red/hit_4_05.png \
	red/hit_4_06.png \
	red/hit_4_07.png \
	red/hit_4_08.png \
	red/hit_4_09.png \
	red/hit_4_10.png \
	red/hit_5_01.png \
	red/hit_5_02.png \
	red/hit_5_03.png \
	red/hit_5_04.png \
	red/hit_5_05.png \
	red/hit_5_06.png \
	red/hit_5_07.png \
	red/hit_5_08.png \
	red/hit_5_09.png \
	red/hit_5_10.png \
	red/hit_6_01.png \
	red/hit_6_02.png \
	red/hit_6_03.png \
	red/hit_6_04.png \
	red/hit_6_05.png \
	red/hit_6_06.png \
	red/hit_6_07.png \
	red/hit_6_08.png \
	red/hit_6_09.png \
	red/hit_6_10.png \
	red/hit_7_01.png \
	red/hit_7_02.png \
	red/hit_7_03.png \
	red/hit_7_04.png \
	red/hit_7_05.png \
	red/hit_7_06.png \
	red/hit_7_07.png \
	red/hit_7_08.png \
	red/hit_7_09.png \
	red/hit_7_10.png \
	red/walk_0_01.png \
	red/walk_0_02.png \
	red/walk_0_03.png \
	red/walk_0_04.png \
	red/walk_0_05.png \
	red/walk_0_06.png \
	red/walk_0_07.png \
	red/walk_0_08.png \
	red/walk_0_09.png \
	red/walk_0_10.png \
	red/walk_0_11.png \
	red/walk_0_12.png \
	red/walk_0_13.png \
	red/walk_0_14.png \
	red/walk_0_15.png \
	red/walk_0_16.png \
	red/walk_1_01.png \
	red/walk_1_02.png \
	red/walk_1_03.png \
	red/walk_1_04.png \
	red/walk_1_05.png \
	red/walk_1_06.png \
	red/walk_1_07.png \
	red/walk_1_08.png \
	red/walk_1_09.png \
	red/walk_1_10.png \
	red/walk_1_11.png \
	red/walk_1_12.png \
	red/walk_1_13.png \
	red/walk_1_14.png \
	red/walk_1_15.png \
	red/walk_1_16.png \
	red/walk_2_01.png \
	red/walk_2_02.png \
	red/walk_2_03.png \
	red/walk_2_04.png \
	red/walk_2_05.png \
	red/walk_2_06.png \
	red/walk_2_07.png \
	red/walk_2_08.png \
	red/walk_2_09.png \
	red/walk_2_10.png \
	red/walk_2_11.png \
	red/walk_2_12.png \
	red/walk_2_13.png \
	red/walk_2_14.png \
	red/walk_2_15.png \
	red/walk_2_16.png \
	red/walk_3_01.png \
	red/walk_3_02.png \
	red/walk_3_03.png \
	red/walk_3_04.png \
	red/walk_3_05.png \
	red/walk_3_06.png \
	red/walk_3_07.png \
	red/walk_3_08.png \
	red/walk_3_09.png \
	red/walk_3_10.png \
	red/walk_3_11.png \
	red/walk_3_12.png \
	red/walk_3_13.png \
	red/walk_3_14.png \
	red/walk_3_15.png \
	red/walk_3_16.png \
	red/walk_4_01.png \
	red/walk_4_02.png \
	red/walk_4_03.png \
	red/walk_4_04.png \
	red/walk_4_05.png \
	red/walk_4_06.png \
	red/walk_4_07.png \
	red/walk_4_08.png \
	red/walk_4_09.png \
	red/walk_4_10.png \
	red/walk_4_11.png \
	red/walk_4_12.png \
	red/walk_4_13.png \
	red/walk_4_14.png \
	red/walk_4_15.png \
	red/walk_4_16.png \
	red/walk_5_01.png \
	red/walk_5_02.png \
	red/walk_5_03.png \
	red/walk_5_04.png \
	red/walk_5_05.png \
	red/walk_5_06.png \
	red/walk_5_07.png \
	red/walk_5_08.png \
	red/walk_5_09.png \
	red/walk_5_10.png \
	red/walk_5_11.png \
	red/walk_5_12.png \
	red/walk_5_13.png \
	red/walk_5_14.png \
	red/walk_5_15.png \
	red/walk_5_16.png \
	red/walk_6_01.png \
	red/walk_6_02.png \
	red/walk_6_03.png \
	red/walk_6_04.png \
	red/walk_6_05.png \
	red/walk_6_06.png \
	red/walk_6_07.png \
	red/walk_6_08.png \
	red/walk_6_09.png \
	red/walk_6_10.png \
	red/walk_6_11.png \
	red/walk_6_12.png \
	red/walk_6_13.png \
	red/walk_6_14.png \
	red/walk_6_15.png \
	red/walk_6_16.png \
	red/walk_7_01.png \
	red/walk_7_02.png \
	red/walk_7_03.png \
	red/walk_7_04.png \
	red/walk_7_05.png \
	red/walk_7_06.png \
	red/walk_7_07.png \
	red/walk_7_08.png \
	red/walk_7_09.png \
	red/walk_7_10.png \
	red/walk_7_11.png \
	red/walk_7_12.png \
	red/walk_7_13.png \
	red/walk_7_14.png \
	red/walk_7_15.png \
	red/walk_7_16.png \
	red/win.png

reddir = \
	$(pkgdatadir)/16/red

## File created by the gnome-build tools
